# MolFFSim

./: .gitignore  ATOMIC_BASIS.md  CMakeLists.txt  README.md  XC_COEFFICIENTS.md  input_sample_1.txt  input_sample_2.txt  input_sample_3.txt  input_sample_4.txt
.github/: macos.yml
.github/workflows/: linux.yml  macos.yml
ATOMIC_BASIS/: README.md  ecp_collection_1.txt  fulle_collection_1.txt
XC_COEFFICIENTS/: README.md  ecp_collection_1.txt  fulle_collection_1.txt
src/: auxiliary_functions.cpp  auxiliary_functions.hpp  main.cpp  molecule.cpp  molecule.hpp  system.cpp  system.hpp  xc_functionals.cpp  xc_functionals.hpp
